--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
 /*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
-
+* {
+  color: #3C373B;
+}
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
   /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  font-size: 10px;
+  font-size: 60px;
+  text-align: center;
 }
 
 h2, h3, h4, h5, h6 {
@@ -13,7 +16,11 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Font size'ı 30px yapın*/
-  font-size: 10px;
+  font-size: 30px;
+}
+body {
+  width: 700px;
+  margin: 0 auto;
 }
 
 /*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
@@ -24,6 +31,13 @@ padding: 10px;
 line-height: 1.4;
 
 */
+p {
+  font-size: 16px;
+  font-family: roboto;
+  padding: 10px;
+  line-height: 1.4;
+}
+
 
 
 /*======= Sayfadaki TÜM imajlar için aşağıdaki özellikleri içeren bir selector yaratın:
@@ -31,6 +45,18 @@ line-height: 1.4;
   border-radius: 10px;
 
 */
+img {
+  border-radius: 60px;
+}
+.banner{
+  max-width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: whitesmoke;
+
+}
 
 .content-row {
   display: flex;
@@ -38,11 +64,18 @@ line-height: 1.4;
 
 .content-row div {
   /*======= margin propery yaratın.  Değerini 20px olarak atayın*/
+  margin: 20px;
 }
 
 .container {
-  /*======= width property yaratın. Değerini 605px olarak atayın */
-  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+}
+
+.content {
+  width: 50%;
 }
 
 .container header nav a {
@@ -55,12 +88,43 @@ line-height: 1.4;
   text-decoration: none;
   margin-bottom: 20px;
    /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
+   background: #E79947;
+  
+}
+.container header nav a:hover {
+/*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
+background: white;
+color: black;
+}
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 10px;
+}
+
+.menu-item {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  background-color: orange;
+  padding: 10px 15px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.menu-item:last-child {
+  margin-right: 0;
+}
+
+.menu-item:hover {
+  background-color: wheat;
+  color: white;
   
 }
 
-.container header nav a:hover {
-/*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
-}
 
 /*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
   margin-top: 20px;
@@ -89,6 +153,7 @@ footer {
 footer .footer-content { 
   margin: 0 auto; 
   /*======= width property yaratın. Değerini 605px olarak atayın */
+  width: 605;
   
 }
 
@@ -107,6 +172,11 @@ footer nav {
   text-decoration: underline;
 */
 
+footer a {
+  margin: 10px;
+  color: black;
+  text-decoration: underline;
+}
 
 footer nav a:first-child {
   margin-left: 0;
@@ -119,4 +189,5 @@ footer nav a:first-child {
 footer .footer-content .copyright {
   padding: 20px 0;
    /*======= metni ortalayacak kodu yazın */
+   text-align: center
 }
